src/objects/Time_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Description__c</fullName>
        <label>Activity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>App Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call/Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration-Workflow/Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Loading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estimation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing/QA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval/Rejection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Recoverable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Client Recoverable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effort_Put_in_by_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Effort Put in by User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Time worked in hours</description>
        <label>Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <formula>Project__r.Sales_Order__r.Client_Reference_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Lead_Email__c</fullName>
        <label>Project Lead Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Sheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Task__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Task</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Time Entries</relationshipLabel>
        <relationshipName>Time_Sheets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Saved</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Complexity__c</fullName>
        <label>Task Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>V Simple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Simple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TS-{DD}-{MM}-{YY}-{0000}</displayFormat>
        <label>Time Sheet Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entries</pluralLabel>
    <recordTypes>
        <fullName>Read_Only</fullName>
        <active>true</active>
        <label>Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Write</fullName>
        <active>true</active>
        <label>Read/Write</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>